--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset"
   },
-  "keywords": ["fastify", "typescript", "mall", "ecommerce"],
+  "keywords": [
+    "fastify",
+    "typescript",
+    "mall",
+    "ecommerce"
+  ],
   "author": "Jiffoo Team",
   "license": "MIT",
   "devDependencies": {
@@ -28,6 +33,7 @@
     "@fastify/jwt": "^7.2.4",
     "@prisma/client": "^5.7.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.5.0",
     "fastify": "^4.24.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
