feat: add OpenAPI documentation and Swagger UI
- Add comprehensive OpenAPI 3.0 specification endpoint at /openapi.json
- Implement Swagger UI interface at /docs for interactive API documentation
- Add welcome page at root endpoint (/) with API overview and available endpoints
- Include detailed API documentation for system and product endpoints
- Add JWT authentication schema configuration
- Support for importing API spec into tools like Apifox and Postman
- Fix root path 404 error by adding proper route handler
- Update server configuration to use port 3001 to avoid conflicts

Features:
- Interactive API testing interface
- Complete endpoint documentation with parameters and responses
- Professional API documentation UI
- Easy integration with API management tools

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.4",
+    "@fastify/swagger": "^8.0.0",
+    "@fastify/swagger-ui": "^4.0.0",
     "@prisma/client": "^5.7.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.5.0",
