--- a/package.json
+++ b/package.json
@@ -31,13 +31,21 @@
   "dependencies": {
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.4",
+    "@fastify/multipart": "^7.0.0",
+    "@fastify/static": "^6.0.0",
     "@fastify/swagger": "^8.0.0",
     "@fastify/swagger-ui": "^4.0.0",
     "@prisma/client": "^5.7.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.5.0",
     "fastify": "^4.24.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
+    "redis": "^5.1.1",
+    "sharp": "^0.34.2",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4"
   }
 }
