--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@fastify/swagger-ui": "^4.0.0",
     "@prisma/client": "^5.7.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "fastify": "^4.24.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
+    "node-cron": "^4.0.7",
     "redis": "^5.1.1",
     "sharp": "^0.34.2",
     "winston": "^3.17.0",
