--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "@fastify/swagger": "^8.0.0",
     "@fastify/swagger-ui": "^4.0.0",
     "@prisma/client": "^5.7.0",
+    "@types/bull": "^4.10.4",
+    "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "fastify": "^4.24.0",
@@ -44,8 +47,10 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "node-cron": "^4.0.7",
+    "nodemailer": "^7.0.3",
     "redis": "^5.1.1",
     "sharp": "^0.34.2",
+    "twilio": "^5.6.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
     "zod": "^3.22.4"
