feat: implement real Stripe and PayPal payment plugins
- Add StripePaymentProvider with full Stripe SDK integration
- Add PayPalPaymentProvider with PayPal Server SDK integration
- Implement comprehensive plugin metadata and configuration schemas
- Add dynamic plugin loading and registration system
- Support for real payment processing, refunds, and webhooks
- Enhanced plugin marketplace with detailed feature descriptions
- Production-ready error handling and logging
- License validation for commercial plugins
- Plugin health monitoring and diagnostics
- Complete documentation and troubleshooting guides
- Ready for production deployment with real API keys

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -40,6 +40,7 @@
     "@fastify/static": "^6.0.0",
     "@fastify/swagger": "^8.0.0",
     "@fastify/swagger-ui": "^4.0.0",
+    "@paypal/paypal-server-sdk": "^1.1.0",
     "@prisma/client": "^5.7.0",
     "@types/bull": "^4.10.4",
     "@types/nodemailer": "^6.4.17",
@@ -54,11 +55,12 @@
     "node-cron": "^4.0.7",
     "nodemailer": "^7.0.3",
     "redis": "^5.1.1",
+    "shared": "workspace:*",
     "sharp": "^0.34.2",
+    "stripe": "^18.2.1",
     "twilio": "^5.6.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
-    "zod": "^3.22.4",
-    "shared": "workspace:*"
+    "zod": "^3.22.4"
   }
 }
