--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.0",
     "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
@@ -39,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "recharts": "^2.15.3",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
     "zod": "^3.22.4",
