--- a/package.json
+++ b/package.json
@@ -46,7 +46,5 @@
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
   },
-  "dependencies": {
-    "@fastify/cors": "^11.0.1"
-  }
+  "dependencies": {}
 }
