--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "javascript-obfuscator": "^4.1.1",
     "turbo": "^2.3.0",
     "typescript": "^5.8.3"
   },
@@ -45,6 +46,5 @@
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
-  },
-  "dependencies": {}
+  }
 }
