--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -1,21 +1,21 @@
-# Jiffoo Mall - Secrets
+# Jiffoo Mall (Open Source) - Secrets
 # ⚠️ WARNING: In production, use external secret management (Vault, AWS Secrets Manager, etc.)
 apiVersion: v1
 kind: Secret
 metadata:
   name: jiffoo-secrets
-  namespace: jiffoo
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
 type: Opaque
 stringData:
   # Database credentials
-  DATABASE_URL: "postgresql://jiffoo:CHANGE_ME@postgres-service:5432/jiffoo_mall?schema=public"
+  DATABASE_URL: "postgresql://jiffoo:CHANGE_ME@postgres-service:5432/jiffoo_opensource?schema=public"
   POSTGRES_USER: "jiffoo"
   POSTGRES_PASSWORD: "CHANGE_ME_IN_PRODUCTION"
   
   # JWT Configuration
-  JWT_SECRET: "jiffoo-jwt-secret-CHANGE-ME-IN-PRODUCTION-2024"
+  JWT_SECRET: "jiffoo-opensource-jwt-secret-CHANGE-ME-2024"
   JWT_EXPIRES_IN: "7d"
   
   # Redis password (if needed)
