--- a/k8s/api.yaml
+++ b/k8s/api.yaml
@@ -1,11 +1,11 @@
-# Jiffoo Mall - API Backend Deployment
+# Jiffoo Mall (Open Source) - API Backend Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: api
-  namespace: jiffoo
+  name: jiffoo-opensource-api
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
     app.kubernetes.io/component: api
 spec:
   replicas: 2
@@ -16,12 +16,12 @@ spec:
     metadata:
       labels:
         app: api
-        app.kubernetes.io/name: jiffoo
+        app.kubernetes.io/name: jiffoo-opensource
         app.kubernetes.io/component: api
     spec:
       containers:
         - name: api
-          image: jiffoo/api:latest
+          image: harbor.lafdru.local/jiffoo-opensource/api:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3001
@@ -55,9 +55,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-service
-  namespace: jiffoo
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
     app.kubernetes.io/component: api
 spec:
   type: ClusterIP
@@ -66,4 +66,23 @@ spec:
   ports:
     - port: 3001
       targetPort: 3001
+      name: http
+---
+# NodePort for external access
+apiVersion: v1
+kind: Service
+metadata:
+  name: api-nodeport
+  namespace: jiffoo-opensource
+  labels:
+    app.kubernetes.io/name: jiffoo-opensource
+    app.kubernetes.io/component: api
+spec:
+  type: NodePort
+  selector:
+    app: api
+  ports:
+    - port: 3001
+      targetPort: 3001
+      nodePort: 31002
       name: http
