--- a/k8s/ingress-internal.yaml
+++ b/k8s/ingress-internal.yaml
@@ -1,31 +1,22 @@
-# Jiffoo Mall - Ingress Configuration (Subdomain Mode)
-# Supports: nginx-ingress, traefik
+# Jiffoo Mall (Open Source) - Internal Ingress (VPN Access)
+# 子域名模式: shop.lafdru.local, api.lafdru.local, admin.lafdru.local
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: jiffoo-ingress
-  namespace: jiffoo
+  name: jiffoo-opensource-internal
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
     app.kubernetes.io/component: ingress
   annotations:
-    # For nginx-ingress
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: "100m"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
-    # For HTTPS (cert-manager)
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
-  tls:
-    - hosts:
-        - shop.jiffoo.example.com
-        - api.jiffoo.example.com
-        - admin.jiffoo.example.com
-      secretName: jiffoo-tls
   rules:
-    # Shop Frontend - shop.jiffoo.example.com
-    - host: shop.jiffoo.example.com
+    # Shop Frontend - shop.lafdru.local
+    - host: shop.lafdru.local
       http:
         paths:
           - path: /
@@ -35,8 +26,8 @@ spec:
                 name: shop-service
                 port:
                   number: 3004
-    # API Backend - api.jiffoo.example.com
-    - host: api.jiffoo.example.com
+    # API Backend - api.lafdru.local
+    - host: api.lafdru.local
       http:
         paths:
           - path: /
@@ -46,8 +37,8 @@ spec:
                 name: api-service
                 port:
                   number: 3001
-    # Admin Dashboard - admin.jiffoo.example.com
-    - host: admin.jiffoo.example.com
+    # Admin Dashboard - admin.lafdru.local
+    - host: admin.lafdru.local
       http:
         paths:
           - path: /
