--- a/k8s/redis.yaml
+++ b/k8s/redis.yaml
@@ -1,11 +1,11 @@
-# Jiffoo Mall - Redis Deployment
+# Jiffoo Mall (Open Source) - Redis Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis
-  namespace: jiffoo
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
     app.kubernetes.io/component: cache
 spec:
   replicas: 1
@@ -16,7 +16,7 @@ spec:
     metadata:
       labels:
         app: redis
-        app.kubernetes.io/name: jiffoo
+        app.kubernetes.io/name: jiffoo-opensource
         app.kubernetes.io/component: cache
     spec:
       containers:
@@ -47,9 +47,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: redis-service
-  namespace: jiffoo
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
     app.kubernetes.io/component: cache
 spec:
   type: ClusterIP
