--- a/k8s/shop.yaml
+++ b/k8s/shop.yaml
@@ -1,11 +1,11 @@
-# Jiffoo Mall - Shop Frontend Deployment
+# Jiffoo Mall (Open Source) - Shop Frontend Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: shop
-  namespace: jiffoo
+  name: jiffoo-opensource-shop
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
     app.kubernetes.io/component: shop
 spec:
   replicas: 2
@@ -16,12 +16,12 @@ spec:
     metadata:
       labels:
         app: shop
-        app.kubernetes.io/name: jiffoo
+        app.kubernetes.io/name: jiffoo-opensource
         app.kubernetes.io/component: shop
     spec:
       containers:
         - name: shop
-          image: jiffoo/shop:latest
+          image: harbor.lafdru.local/jiffoo-opensource/shop:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3004
@@ -30,7 +30,7 @@ spec:
             - name: NODE_ENV
               value: "production"
             - name: NEXT_PUBLIC_API_URL
-              value: "https://api.jiffoo.example.com"
+              value: "http://jiffoo.chfastpay.com:31002"
             - name: API_SERVICE_URL
               value: "http://api-service:3001"
           resources:
@@ -57,9 +57,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: shop-service
-  namespace: jiffoo
+  namespace: jiffoo-opensource
   labels:
-    app.kubernetes.io/name: jiffoo
+    app.kubernetes.io/name: jiffoo-opensource
     app.kubernetes.io/component: shop
 spec:
   type: ClusterIP
@@ -68,4 +68,23 @@ spec:
   ports:
     - port: 3004
       targetPort: 3004
+      name: http
+---
+# NodePort for external access
+apiVersion: v1
+kind: Service
+metadata:
+  name: shop-nodeport
+  namespace: jiffoo-opensource
+  labels:
+    app.kubernetes.io/name: jiffoo-opensource
+    app.kubernetes.io/component: shop
+spec:
+  type: NodePort
+  selector:
+    app: shop
+  ports:
+    - port: 3004
+      targetPort: 3004
+      nodePort: 31001
       name: http
