fix: use --ignore-scripts to skip prisma postinstall during deps stage

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -33,9 +33,6 @@ WORKDIR /app
 # Dependencies stage
 FROM base AS deps
 
-# Skip Prisma engine download during install (we'll do it in builder stage with retries)
-ENV PRISMA_SKIP_POSTINSTALL_GENERATE=true
-
 # Copy workspace files
 COPY package.json pnpm-lock.yaml pnpm-workspace.yaml ./
 COPY apps/api/package.json ./apps/api/
@@ -47,8 +44,11 @@ RUN pnpm config set network-timeout 300000 && \
     pnpm config set fetch-retry-mintimeout 20000 && \
     pnpm config set fetch-retry-maxtimeout 120000
 
-# Install dependencies
-RUN pnpm install --frozen-lockfile
+# Install dependencies with --ignore-scripts to skip prisma postinstall
+RUN pnpm install --frozen-lockfile --ignore-scripts
+
+# Rebuild native modules that need postinstall (but not prisma)
+RUN pnpm rebuild esbuild 2>/dev/null || true
 
 # Builder stage
 FROM base AS builder
@@ -64,7 +64,7 @@ COPY --from=deps /app/packages/shared/node_modules ./packages/shared/node_module
 # Copy source code
 COPY . .
 
-# Ensure plugins directory exists (create empty one if it doesn't exist)
+# Ensure plugins directory exists
 RUN mkdir -p /app/plugins
 
 # Build shared package first
@@ -72,8 +72,9 @@ RUN pnpm --filter shared build
 
 # Generate Prisma client with retries
 RUN for i in 1 2 3 4 5; do \
-      pnpm --filter api prisma generate && break || \
-      echo "Prisma generate attempt $i failed, retrying in 10s..." && sleep 10; \
+      echo "Prisma generate attempt $i..." && \
+      cd /app/apps/api && npx prisma generate && break || \
+      echo "Attempt $i failed, retrying in 30s..." && sleep 30; \
     done
 
 # Build api service
@@ -83,14 +84,12 @@ RUN pnpm --filter api build
 FROM base AS runner
 WORKDIR /app
 
-# Redeclare ARGs after FROM
 ARG BUILD_SHA
 ARG BUILD_TIME
 ARG APP_VERSION
 
 ENV NODE_ENV=production
 ENV PORT=8001
-# Inject build info as environment variables for /health endpoint
 ENV BUILD_SHA=${BUILD_SHA}
 ENV BUILD_TIME=${BUILD_TIME}
 ENV APP_VERSION=${APP_VERSION}
@@ -98,20 +97,16 @@ ENV APP_VERSION=${APP_VERSION}
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 api
 
-# Copy built application
 COPY --from=builder --chown=api:nodejs /app/apps/api/dist ./apps/api/dist
 COPY --from=builder --chown=api:nodejs /app/apps/api/package.json ./apps/api/
 COPY --from=builder --chown=api:nodejs /app/packages/shared/dist ./packages/shared/dist
 COPY --from=builder --chown=api:nodejs /app/packages/shared/package.json ./packages/shared/
-# Copy plugins directory (required by payment-manager)
 COPY --from=builder --chown=api:nodejs /app/plugins ./plugins
 
-# Copy production dependencies from builder (includes Prisma generated client)
 COPY --from=builder --chown=api:nodejs /app/node_modules ./node_modules
 COPY --from=builder --chown=api:nodejs /app/apps/api/node_modules ./apps/api/node_modules
 COPY --from=builder --chown=api:nodejs /app/packages/shared/node_modules ./packages/shared/node_modules
 
-# Create logs and uploads directories with proper permissions
 RUN mkdir -p /app/logs /app/uploads && chown -R api:nodejs /app/logs /app/uploads
 
 USER api
